tests/config_declarations/config_declarations.exp
Error ------------------------------------------------------------------------------------------------------- A.js:16:21

Cannot assign `123` to `test4` because number [1] is incompatible with string [2]. [incompatible-type]

   A.js:16:21
   16| var test4: string = 123; // This error is NOT silenced
                           ^^^ [1]

References:
   A.js:16:12
   16| var test4: string = 123; // This error is NOT silenced
                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- D.js:7:5

Cannot assign `y` to `x` because property `bar` is missing in object type [1] but exists in object type [2] in property
`x`. [incompatible-type]

   D.js:7:5
   7| x = y;
          ^

References:
   D.js:2:6
   2|   x: { foo: string }
           ^^^^^^^^^^^^^^^ [1]
   D.js:5:6
   5|   x: { bar: number }
           ^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- D.js:7:5

Cannot assign `y` to `x` because property `foo` is missing in object type [1] but exists in object type [2] in property
`x`. [incompatible-type]

   D.js:7:5
   7| x = y;
          ^

References:
   D.js:5:6
   5|   x: { bar: number }
           ^^^^^^^^^^^^^^^ [1]
   D.js:2:6
   2|   x: { foo: string }
           ^^^^^^^^^^^^^^^ [2]


Warning ------------------------------------------------------------------------------------------------------ A.js:14:1

Unused suppression comment.

   14| // $FlowFixMe[incompatible-type] Error unused suppression
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Warning ------------------------------------------------------------------------------------------------------- B.js:1:1

Unused suppression comment.

   1| // $FlowFixMe[incompatible-type]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 3 errors and 2 warnings
